--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
     "core-js": "^2.5.4",
+    "lite-server": "^2.4.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
