--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "lite-server": "^2.4.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
